# docs/swagger/swagger.json
@@ -12,8 +12,77 @@
     "host": "localhost:1234",
     "basePath": "/",
     "paths": {
+        "/api/v1/menus": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Menus"
+                ],
+                "responses": {}
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Menus"
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/menus/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Menus"
+                ],
+                "responses": {}
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Menus"
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Menus"
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/roles": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -26,6 +95,11 @@
                 "responses": {}
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -34,12 +108,28 @@
                 ],
                 "tags": [
                     "Roles"
+                ],
+                "parameters": [
+                    {
+                        "description": "Pass session information to DBaaS Parameter",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/engine.Role"
+                        }
+                    }
                 ],
                 "responses": {}
             }
         },
         "/api/v1/roles/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -48,10 +138,24 @@
                 ],
                 "tags": [
                     "Roles"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Pass session information to DBaaS Parameter",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {}
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -60,10 +164,33 @@
                 ],
                 "tags": [
                     "Roles"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Pass session information to DBaaS Parameter",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Pass session information to DBaaS Parameter",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/engine.Role"
+                        }
+                    }
                 ],
                 "responses": {}
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -72,6 +199,15 @@
                 ],
                 "tags": [
                     "Roles"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Pass session information to DBaaS Parameter",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {}
             }
@@ -126,6 +262,21 @@
                 },
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "engine.Role": {
+            "type": "object",
+            "required": [
+                "code",
+                "name"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         }
