# engine/route.go
@@ -21,6 +21,7 @@ func ApiVersion(c *gin.Context) {
 
 // @Tags Roles
 // API Roles : passing specific parameter to DBaaS from Service Portal
+// @Security BearerAuth
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/roles [get]
@@ -30,6 +31,8 @@ func IndexRoles(c *gin.Context) {
 
 // @Tags Roles
 // API Roles : passing specific parameter to DBaaS from Service Portal
+// @Security BearerAuth
+// @Param filter body engine.Role true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/roles [post]
@@ -39,6 +42,8 @@ func CreateRoles(c *gin.Context) {
 
 // @Tags Roles
 // API Roles : passing specific parameter to DBaaS from Service Portal
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/roles/{id} [get]
@@ -48,6 +53,9 @@ func ShowRoles(c *gin.Context) {
 
 // @Tags Roles
 // API Roles : passing specific parameter to DBaaS from Service Portal
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
+// @Param filter body engine.Role true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/roles/{id} [put]
@@ -57,9 +65,56 @@ func UpdateRoles(c *gin.Context) {
 
 // @Tags Roles
 // API Roles : passing specific parameter to DBaaS from Service Portal
+// @Security BearerAuth
+// @Param id path string true "Pass session information to DBaaS Parameter"
 // @Accept  json
 // @Produce  json
 // @Router /api/v1/roles/{id} [delete]
 func DeleteRoles(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Menus
+// API Menus : passing specific parameter to DBaaS from Service Portal
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/menus [get]
+func IndexMenus(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Menus
+// API Menus : passing specific parameter to DBaaS from Service Portal
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/menus [post]
+func CreateMenus(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Menus
+// API Menus : passing specific parameter to DBaaS from Service Portal
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/menus/{id} [get]
+func ShowMenus(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Menus
+// API Menus : passing specific parameter to DBaaS from Service Portal
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/menus/{id} [put]
+func UpdateMenus(c *gin.Context) {
+	c.JSON(http.StatusOK, "")
+}
+
+// @Tags Menus
+// API Menus : passing specific parameter to DBaaS from Service Portal
+// @Accept  json
+// @Produce  json
+// @Router /api/v1/menus/{id} [delete]
+func DeleteMenus(c *gin.Context) {
 	c.JSON(http.StatusOK, "")
 }
